# cedar-valuerecommender-server-application/src/main/java/org/metadatacenter/cedar/valuerecommender/resources/CommandResource.java
@@ -4,14 +4,15 @@ import com.codahale.metrics.annotation.Timed;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.networknt.schema.ValidationMessage;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiImplicitParam;
-import io.swagger.annotations.ApiImplicitParams;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import io.swagger.annotations.Authorization;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.metadatacenter.cedar.valuerecommender.resources.swaggermodel.RecommendationInput;
 import org.metadatacenter.cedar.valuerecommender.utils.Validator;
 import org.metadatacenter.config.CedarConfig;
@@ -42,7 +43,8 @@ import static org.metadatacenter.rest.assertion.GenericAssertions.LoggedIn;
 
 @Path("/command")
 @Produces(MediaType.APPLICATION_JSON)
-@Api(value = "/command", tags = "Command", authorizations = {@Authorization("api_key")})
+@Tag(name = "Command")
+@SecurityRequirement(name = "api_key")
 public class CommandResource extends AbstractValuerecommenderServerResource {
 
   private static ValueRecommenderService valueRecommenderService;
@@ -62,19 +64,15 @@ public class CommandResource extends AbstractValuerecommenderServerResource {
   @POST
   @Timed
   @Path("/recommend")
-  @ApiOperation(value = "Get recommendation", notes = "Get metadata recommendations for a target field.")
-  @ApiImplicitParams({
-      @ApiImplicitParam(name = "Input", value = "The recommendation input", required = true,
-          dataType = "org.metadatacenter.cedar.valuerecommender.resources.swaggermodel.RecommendationInput",
-          paramType = "body")
-  })
+  @Operation(summary = "Get recommendation", description = "Get metadata recommendations for a target field.")
+  @RequestBody(description = "The recommendation input", required = true, content = @Content(schema = @Schema(implementation = org.metadatacenter.cedar.valuerecommender.resources.swaggermodel.RecommendationInput.class)))
   @ApiResponses({
-      @ApiResponse(code = 200, message = "Successful operation"),
-      @ApiResponse(code = 400, message = "Bad request"),
-      @ApiResponse(code = 401, message = "Unauthorized"),
-      @ApiResponse(code = 403, message = "Forbidden"),
-      @ApiResponse(code = 404, message = "Not found"),
-      @ApiResponse(code = 500, message = "Internal server error")
+      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "400", description = "Bad request"),
+      @ApiResponse(responseCode = "401", description = "Unauthorized"),
+      @ApiResponse(responseCode = "403", description = "Forbidden"),
+      @ApiResponse(responseCode = "404", description = "Not found"),
+      @ApiResponse(responseCode = "500", description = "Internal server error")
   })
   public Response recommendValues() throws CedarException {
     CedarRequestContext c = buildRequestContext();
@@ -141,18 +139,18 @@ public class CommandResource extends AbstractValuerecommenderServerResource {
   @POST
   @Timed
   @Path("/generate-rules/{template_id}")
-  @ApiOperation(value = "Generate rules for a template", notes = "Generate the mining rules that the value "
+  @Operation(summary = "Generate rules for a template", description = "Generate the mining rules that the value "
       + "recommender uses to produce recommendations for a template.")
   @ApiResponses({
-      @ApiResponse(code = 200, message = "Successful operation"),
-      @ApiResponse(code = 400, message = "Bad request"),
-      @ApiResponse(code = 401, message = "Unauthorized"),
-      @ApiResponse(code = 403, message = "Forbidden"),
-      @ApiResponse(code = 404, message = "Not found"),
-      @ApiResponse(code = 500, message = "Internal server error")
+      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "400", description = "Bad request"),
+      @ApiResponse(responseCode = "401", description = "Unauthorized"),
+      @ApiResponse(responseCode = "403", description = "Forbidden"),
+      @ApiResponse(responseCode = "404", description = "Not found"),
+      @ApiResponse(responseCode = "500", description = "Internal server error")
   })
   public Response generateRules(
-      @ApiParam(value = "Template identifier.", required = true)
+      @Parameter(description = "Template identifier.", required = true)
       @PathParam(PP_TEMPLATE_ID) String templateId) throws CedarException {
     CedarRequestContext c = buildRequestContext();
     c.must(c.user()).be(LoggedIn);
@@ -175,15 +173,15 @@ public class CommandResource extends AbstractValuerecommenderServerResource {
   @POST
   @Timed
   @Path("/can-generate-recommendations")
-  @ApiOperation(value = "Check whether recommendations can be generated", notes = "Check whether the value "
+  @Operation(summary = "Check whether recommendations can be generated", description = "Check whether the value "
       + "recommender can generate recommendations for a template (or for any template if none is provided).")
   @ApiResponses({
-      @ApiResponse(code = 200, message = "Successful operation"),
-      @ApiResponse(code = 400, message = "Bad request"),
-      @ApiResponse(code = 401, message = "Unauthorized"),
-      @ApiResponse(code = 403, message = "Forbidden"),
-      @ApiResponse(code = 404, message = "Not found"),
-      @ApiResponse(code = 500, message = "Internal server error")
+      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "400", description = "Bad request"),
+      @ApiResponse(responseCode = "401", description = "Unauthorized"),
+      @ApiResponse(responseCode = "403", description = "Forbidden"),
+      @ApiResponse(responseCode = "404", description = "Not found"),
+      @ApiResponse(responseCode = "500", description = "Internal server error")
   })
   public Response areRecommendationsEnabled() throws CedarException {
     CedarRequestContext c = buildRequestContext();
@@ -208,18 +206,18 @@ public class CommandResource extends AbstractValuerecommenderServerResource {
   @GET
   @Timed
   @Path("/generate-rules/status/{template_id}")
-  @ApiOperation(value = "Get rule-generation status for a template", notes = "Get status information about the "
+  @Operation(summary = "Get rule-generation status for a template", description = "Get status information about the "
       + "rule-generation process for a template.")
   @ApiResponses({
-      @ApiResponse(code = 200, message = "Successful operation"),
-      @ApiResponse(code = 400, message = "Bad request"),
-      @ApiResponse(code = 401, message = "Unauthorized"),
-      @ApiResponse(code = 403, message = "Forbidden"),
-      @ApiResponse(code = 404, message = "Not found"),
-      @ApiResponse(code = 500, message = "Internal server error")
+      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "400", description = "Bad request"),
+      @ApiResponse(responseCode = "401", description = "Unauthorized"),
+      @ApiResponse(responseCode = "403", description = "Forbidden"),
+      @ApiResponse(responseCode = "404", description = "Not found"),
+      @ApiResponse(responseCode = "500", description = "Internal server error")
   })
   public Response getRulesGenerationStatus(
-      @ApiParam(value = "Template identifier.", required = true)
+      @Parameter(description = "Template identifier.", required = true)
       @PathParam(PP_TEMPLATE_ID) String templateId) throws CedarException {
     CedarRequestContext c = buildRequestContext();
     c.must(c.user()).be(LoggedIn);
@@ -235,15 +233,15 @@ public class CommandResource extends AbstractValuerecommenderServerResource {
   @GET
   @Timed
   @Path("/generate-rules/status")
-  @ApiOperation(value = "Get rule-generation status for all templates", notes = "Get status information about the "
+  @Operation(summary = "Get rule-generation status for all templates", description = "Get status information about the "
       + "rule-generation process for all templates.")
   @ApiResponses({
-      @ApiResponse(code = 200, message = "Successful operation"),
-      @ApiResponse(code = 400, message = "Bad request"),
-      @ApiResponse(code = 401, message = "Unauthorized"),
-      @ApiResponse(code = 403, message = "Forbidden"),
-      @ApiResponse(code = 404, message = "Not found"),
-      @ApiResponse(code = 500, message = "Internal server error")
+      @ApiResponse(responseCode = "200", description = "Successful operation"),
+      @ApiResponse(responseCode = "400", description = "Bad request"),
+      @ApiResponse(responseCode = "401", description = "Unauthorized"),
+      @ApiResponse(responseCode = "403", description = "Forbidden"),
+      @ApiResponse(responseCode = "404", description = "Not found"),
+      @ApiResponse(responseCode = "500", description = "Internal server error")
   })
   public Response getRulesGenerationStatusAll() throws CedarException {
     CedarRequestContext c = buildRequestContext();
